fix: CSS fixed. overflow correction of cards.

--- a/client/src/components/app/app.css
+++ b/client/src/components/app/app.css
@@ -2,7 +2,6 @@
     display: grid;
     grid-template-rows: auto 1fr;
     height: 100vh;
-    border: 2px solid black;
     padding-left: 0px;
     padding-right: 0px;
   }
